--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="margin: 0;">
-    <iframe src="codeReader.php" frameborder="0" width="100%" height="100%"
+    <iframe src="openRecord.php" frameborder="0" width="100%" height="100%"
         style="display: block; width: 100%; height: 100vh;"></iframe>
 </body>
 
